--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,6 @@ repositories {
 subprojects {
     apply plugin: 'java'
     dependencies {
-        testImplementation platform('org.junit:junit-bom:5.9.1')
-        testImplementation 'org.junit.jupiter:junit-jupiter'
-        testImplementation 'org.mockito:mockito-junit-jupiter:5.6.0'
-        testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.23.1'
-
         implementation platform ('io.netty:netty-bom:4.1.99.Final')
         implementation 'io.netty:netty-buffer'
         implementation 'io.netty:netty-codec'
@@ -31,6 +26,11 @@ subprojects {
         annotationProcessor 'org.projectlombok:lombok:1.18.30'
         implementation 'org.slf4j:slf4j-api:2.0.9'
         implementation 'org.slf4j:slf4j-simple:2.0.7'
+
+        testImplementation platform('org.junit:junit-bom:5.9.1')
+        testImplementation 'org.junit.jupiter:junit-jupiter'
+        testImplementation 'org.mockito:mockito-junit-jupiter:5.6.0'
+        testImplementation 'org.assertj:assertj-core:3.23.1'
     }
 }
 
